# ggm-tree

./: .gitignore  CONTRIBUTORS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: grid.py  plot.py  runner.py
bench/results/: cpu_1t-aes-sbox-variable-t0-mfull-d04.json  cpu_1t-aes-sbox-variable-t0-mfull-d06.json  cpu_1t-aes-sbox-variable-t0-mfull-d08.json  cpu_1t-aes-sbox-variable-t0-mfull-d10.json  cpu_1t-aes-sbox-variable-t0-mfull-d12.json  cpu_1t-aes-sbox-variable-t0-mfull-d14.json  cpu_1t-aes-sbox-variable-t0-mfull-d16.json  cpu_1t-aes-sbox-variable-t0-mfull-d18.json  cpu_1t-aes-sbox-variable-t0-mfull-d20.json  cpu_1t-spongent-sbox-variable-t0-mfull-d04.json  cpu_1t-spongent-sbox-variable-t0-mfull-d06.json  cpu_1t-spongent-sbox-variable-t0-mfull-d08.json  cpu_1t-spongent-sbox-variable-t0-mfull-d10.json  cpu_1t-spongent-sbox-variable-t0-mfull-d12.json  cpu_1t-spongent-sbox-variable-t0-mfull-d14.json  cpu_1t-spongent-sbox-variable-t0-mfull-d16.json  cpu_1t-spongent-sbox-variable-t0-mfull-d18.json  cpu_1t-spongent-sbox-variable-t0-mfull-d20.json  cpu_1t-spongent-spongent-128-sbox-variable-t0-mfull-d04.json  cpu_1t-spongent-spongent-128-sbox-variable-t0-mfull-d08.json  cpu_1t-spongent-spongent-128-sbox-variable-t0-mfull-d12.json  cpu_1t-spongent-spongent-128-sbox-variable-t0-mfull-d16.json  cpu_1t-spongent-spongent-160-sbox-variable-t0-mfull-d04.json  cpu_aesni-aes-sbox-variable-t0-mfull-d04.json  (+191 more)
docs/: GPU_RUNBOOK.md
report/: README.md  main.tex  refs.bib
tests/: conftest.py  test_aes_kat.py  test_ggm_consistency.py  test_tree_indexing.py
(+20 files in other folders)
