[project]
name = "ggm-tree"
version = "0.1.0"
description = "GGM PRF tree on GPU with AES-128 and Spongent PRGs"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "pytest>=8.0",
]

[project.optional-dependencies]
gpu = ["pycuda>=2024.1"]
dev = [
    "black>=24.0",
    "ruff>=0.4",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ggm"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["gpu: requires a CUDA device"]
